feat: normal and incremental write base functionality

--- a/docker-compose.yml
+++ b/docker-compose.yml
@@ -7,6 +7,7 @@ app:
   tty: true
   stdin_open: true
   environment:
+    STORAGE_API_TOKEN: $STORAGE_API_TOKEN
     SNOWFLAKE_DB_HOST: $SNOWFLAKE_DB_HOST
     SNOWFLAKE_DB_PORT: $SNOWFLAKE_DB_PORT
     SNOWFLAKE_DB_USER: $SNOWFLAKE_DB_USER
