--- a/composer.json
+++ b/composer.json
@@ -17,7 +17,8 @@
     "require-dev": {
         "phpunit/phpunit": "4.6.*",
         "squizlabs/php_codesniffer": "^2.6",
-        "codeclimate/php-test-reporter": "^0.3"
+        "codeclimate/php-test-reporter": "^0.3",
+        "keboola/storage-api-client": "^4.14"
     },
     "autoload": {
         "psr-4": {
