--- a/docker-compose.yml
+++ b/docker-compose.yml
@@ -14,13 +14,14 @@ app:
     SNOWFLAKE_DB_PASSWORD: $SNOWFLAKE_DB_PASSWORD
     SNOWFLAKE_DB_DATABASE: $SNOWFLAKE_DB_DATABASE
     SNOWFLAKE_DB_SCHEMA: $SNOWFLAKE_DB_SCHEMA
-#  links:
-#    - sshproxy
-#
-#sshproxy:
-#  build: ./tests/env/sshproxy
-#  volumes:
-#      - ./tests/env/sshproxy:/code
-#  working_dir: /code
-#  ports:
-#    - "2222:22"
+
+php:
+  image: keboola/docker-php56-all-db
+  volumes:
+      - .:/code
+  working_dir: /code
+  environment:
+    - AWS_ACCESS_KEY
+    - AWS_SECRET_KEY
+    - AWS_S3_BUCKET
+    - AWS_REGION
