--- a/tests/data/functional/config.yml
+++ b/tests/data/functional/config.yml
@@ -1,10 +1,10 @@
 parameters:
     db:
-        driver: redshift
-        host: redshift
-        port: 5439
-        database: test
-        schema: public
+        driver: snowflake
+        host:
+        port:
+        database:
+        schema:
         user:
         password:
 
@@ -26,14 +26,14 @@ parameters:
                 -
                     name: name
                     dbName: name
-                    type: nvarchar
+                    type: varchar
                     size: 255
                     nullable:
                     default:
                 -
                     name: glasses
                     dbName: glasses
-                    type: nvarchar
+                    type: varchar
                     size: 255
                     nullable:
                     default:
@@ -75,14 +75,14 @@ parameters:
                 -
                     name: name
                     dbName: name
-                    type: nvarchar
+                    type: varchar
                     size: 255
                     nullable:
                     default:
                 -
                     name: glasses
                     dbName: glasses
-                    type: nvarchar
+                    type: varchar
                     size: 255
                     nullable:
                     default:
