--- a/tests/data/snowflake/config.yml
+++ b/tests/data/snowflake/config.yml
@@ -26,14 +26,14 @@ parameters:
                 -
                     name: name
                     dbName: name
-                    type: nvarchar
+                    type: varchar
                     size: 255
                     nullable:
                     default:
                 -
                     name: glasses
                     dbName: glasses
-                    type: nvarchar
+                    type: varchar
                     size: 255
                     nullable:
                     default:
