fix - functional tests

--- a/tests/data/functional/config.yml
+++ b/tests/data/functional/config.yml
@@ -94,3 +94,10 @@ parameters:
                     size: 255
                     nullable:
                     default:
+                -
+                    name: age
+                    dbName: age
+                    type: int
+                    size:
+                    nullable: true
+                    default:
