fix - null handling - external stage used to be able to use import transformation

--- a/tests/data/snowflake/config.yml
+++ b/tests/data/snowflake/config.yml
@@ -28,7 +28,7 @@ parameters:
                     dbName: name
                     type: varchar
                     size: 255
-                    nullable: true
+                    nullable: false
                     default:
                 -
                     name: glasses
