--- a/.travis.yml
+++ b/.travis.yml
@@ -9,9 +9,9 @@ before_install:
   - docker-compose -v
 
 install:
-  - docker-compose run --rm php composer install -n
-  - docker-compose run --rm php ./vendor/bin/phpcs --standard=psr2 --ignore=vendor -n .
   - docker-compose run --rm -e AWS_ACCESS_KEY=$AWS_ODBC_KEY -e AWS_SECRET_KEY=$AWS_ODBC_SECRET php php driver/downloadDriver.php
+  - docker-compose build app
+  - docker-compose run --rm app composer ci
   - docker-compose build app
 
 script:
