--- a/.travis.yml
+++ b/.travis.yml
@@ -9,8 +9,15 @@ before_install:
   - docker-compose -v
 
 install:
-  - docker-compose run --rm -e AWS_ACCESS_KEY=$AWS_ODBC_KEY -e AWS_SECRET_KEY=$AWS_ODBC_SECRET php php driver/downloadDriver.php
-  - docker-compose build app
+  # download Snowflake drivers
+  - >-
+   docker
+   run
+   -e AWS_ACCESS_KEY=$AWS_ODBC_KEY
+   -e AWS_SECRET_KEY=$AWS_ODBC_SECRET
+   -v `pwd`:/code
+   quay.io/keboola/aws-cli
+   s3 cp s3://keboola-configs/snowflake/snowflake_linux_x8664_odbc-2.16.6.tgz /code/snowflake_linux_x8664_odbc.tgz
   - docker-compose run --rm app composer ci
   - docker-compose build app
 
