--- a/.travis.yml
+++ b/.travis.yml
@@ -9,9 +9,18 @@ before_install:
   - docker-compose -v
 
 install:
+  # download Snowflake drivers
+  - >-
+   docker
+   run
+   -e AWS_ACCESS_KEY_ID=$AWS_ODBC_KEY
+   -e AWS_SECRET_ACCESS_KEY=$AWS_ODBC_SECRET
+   -v `pwd`:/code
+   quay.io/keboola/aws-cli
+   s3 cp s3://keboola-configs/drivers/snowflake/snowflake_linux_x8664_odbc-2.16.6.tgz /code/snowflake_linux_x8664_odbc.tgz
+  - docker-compose build app
   - docker-compose run --rm php composer install -n
   - docker-compose run --rm php ./vendor/bin/phpcs --standard=psr2 --ignore=vendor -n .
-  - docker-compose run --rm -e AWS_ACCESS_KEY=$AWS_ODBC_KEY -e AWS_SECRET_KEY=$AWS_ODBC_SECRET php php driver/downloadDriver.php
   - docker-compose build app
 
 script:
