--- a/composer.json
+++ b/composer.json
@@ -16,9 +16,11 @@
     },
     "require-dev": {
         "phpunit/phpunit": "4.6.*",
-        "squizlabs/php_codesniffer": "^2.6",
+        "squizlabs/php_codesniffer": "^3.2",
         "codeclimate/php-test-reporter": "^0.3",
-        "keboola/storage-api-client": "^4.14"
+        "keboola/storage-api-client": "^4.14",
+        "keboola/coding-standard": "^6.0",
+        "phpstan/phpstan": "^0.10.3"
     },
     "autoload": {
         "psr-4": {
