--- a/.travis.yml
+++ b/.travis.yml
@@ -19,9 +19,8 @@ install:
    quay.io/keboola/aws-cli
    s3 cp s3://keboola-configs/drivers/snowflake/snowflake_linux_x8664_odbc-2.16.6.tgz /code/snowflake_linux_x8664_odbc.tgz
   - docker-compose build app
-  - docker-compose run --rm php composer install -n
-  - docker-compose run --rm php ./vendor/bin/phpcs --standard=psr2 --ignore=vendor -n .
-  - docker-compose build app
+  - docker-compose run --rm app composer install
+  - docker-compose run --rm app composer ci
 
 script:
   - docker-compose run -e CODECLIMATE_REPO_TOKEN=$CODECLIMATE_REPO_TOKEN app
