--- a/composer.json
+++ b/composer.json
@@ -11,7 +11,7 @@
         }
     ],
     "require": {
-        "php": ">=5.6",
+        "php": ">=7.1",
         "keboola/db-writer-common": "^2.0"
     },
     "require-dev": {
@@ -40,6 +40,11 @@
     "autoload": {
         "psr-4": {
             "Keboola\\": "src/Keboola/"
+        }
+    },
+    "autoload-dev": {
+        "psr-4": {
+            "Keboola\\DbWriter\\Snowflake\\Tests\\": "tests/phpunit"
         }
     }
 }
