--- a/composer.json
+++ b/composer.json
@@ -11,18 +11,43 @@
         }
     ],
     "require": {
-        "php": ">=5.6",
+        "php": ">=7.1",
         "keboola/db-writer-common": "^2.0"
     },
     "require-dev": {
         "phpunit/phpunit": "4.6.*",
-        "squizlabs/php_codesniffer": "^2.6",
+        "squizlabs/php_codesniffer": "^3.2",
         "codeclimate/php-test-reporter": "^0.3",
-        "keboola/storage-api-client": "^4.14"
+        "keboola/storage-api-client": "^4.14",
+        "keboola/coding-standard": "^6.0",
+        "phpstan/phpstan": "^0.10.3"
+    },
+    "config": {
+        "process-timeout": 1800
+    },
+    "scripts": {
+        "tests": "phpunit",
+        "phpcs": "phpcs -n --ignore=vendor --extensions=php .",
+        "phpcbf": "phpcbf -n --ignore=vendor --extensions=php .",
+        "phpstan": "phpstan analyse ./src ./tests --level=max --no-progress -c phpstan.neon",
+        "build": [
+            "@phpcs",
+            "@phpstan",
+            "@tests"
+        ],
+        "ci": [
+            "@composer validate --no-check-all --strict",
+            "@build"
+        ]
     },
     "autoload": {
         "psr-4": {
             "Keboola\\": "src/Keboola/"
+        }
+    },
+    "autoload-dev": {
+        "psr-4": {
+            "Keboola\\DbWriter\\Snowflake\\Tests\\": "tests/phpunit"
         }
     }
 }
