--- a/composer.json
+++ b/composer.json
@@ -12,10 +12,10 @@
     ],
     "require": {
         "php": ">=7.1",
-        "keboola/db-writer-common": "^3.0"
+        "keboola/db-writer-common": "^4.0"
     },
     "require-dev": {
-        "phpunit/phpunit": "4.6.*",
+        "phpunit/phpunit": "^7.0",
         "squizlabs/php_codesniffer": "^3.2",
         "codeclimate/php-test-reporter": "^0.3",
         "keboola/storage-api-client": "^4.14",
