--- a/phpstan.neon
+++ b/phpstan.neon
@@ -1,4 +1,5 @@
 parameters:
     ignoreErrors:
+        - '#Keboola\\DbWriter\\Writer\\Snowflake\:\:__construct\(\) does not call parent constructor from Keboola\\DbWriter\\Writer\.#'
         - '#Call to an undefined method Symfony\\Component\\Config\\Definition\\Builder\\NodeDefinition\:\:children\(\)\.#'
         - '#constructor expects Exception\|null\, Throwable given\.#'
