--- a/composer.json
+++ b/composer.json
@@ -14,7 +14,7 @@
         "php": ">=7.1",
         "keboola/db-writer-common": "^5.0",
         "keboola/php-csv-db-import": "^4.1",
-        "keboola/php-datatypes": "dev-erik-test"
+        "keboola/php-datatypes": "^4.0.0"
     },
     "require-dev": {
         "phpunit/phpunit": "^7.0",
