--- a/composer.json
+++ b/composer.json
@@ -15,12 +15,12 @@
         "keboola/db-writer-common": "^5.0"
     },
     "require-dev": {
-        "phpunit/phpunit": "^7.0",
+        "phpunit/phpunit": "^8.3",
         "squizlabs/php_codesniffer": "^3.2",
         "codeclimate/php-test-reporter": "^0.3",
         "keboola/storage-api-client": "^4.14",
-        "keboola/coding-standard": "^6.0",
-        "phpstan/phpstan": "^0.10.3"
+        "keboola/coding-standard": "^8.0",
+        "phpstan/phpstan-shim": "^0.11.16"
     },
     "config": {
         "process-timeout": 1800
