--- a/phpstan.neon
+++ b/phpstan.neon
@@ -2,3 +2,4 @@ parameters:
     ignoreErrors:
         - '#Keboola\\DbWriter\\Writer\\Snowflake\:\:__construct\(\) does not call parent constructor from Keboola\\DbWriter\\Writer\.#'
         - '#Call to an undefined method Symfony\\Component\\Config\\Definition\\Builder\\NodeDefinition\:\:children\(\)\.#'
+        - '#Call to an undefined method Symfony\\Component\\Config\\Definition\\Builder\\NodeDefinition::ignoreExtraKeys\(\)\.#'
