--- a/composer.json
+++ b/composer.json
@@ -6,13 +6,18 @@
     "keywords": ["keboola", "snowflake", "db", "writer"],
     "require": {
         "php": ">=7.1",
-        "keboola/db-writer-common": "^5.0"
+        "ext-json": "*",
+        "ext-mbstring": "*",
+        "ext-PDO": "*",
+        "keboola/db-writer-common": "^5.0",
+        "keboola/csv": "^1.1",
+        "keboola/storage-api-client": "^10.15",
+        "symfony/config": "^4.0"
     },
     "require-dev": {
         "phpunit/phpunit": "^8.3",
         "squizlabs/php_codesniffer": "^3.2",
         "codeclimate/php-test-reporter": "^0.3",
-        "keboola/storage-api-client": "^4.14",
         "keboola/coding-standard": "^8.0",
         "phpstan/phpstan-shim": "^0.11.16"
     },
