--- a/composer.json
+++ b/composer.json
@@ -17,8 +17,8 @@
     "require-dev": {
         "codeclimate/php-test-reporter": "^0.3",
         "keboola/coding-standard": "^8.0",
-        "phpstan/phpstan-shim": "^0.11.16",
-        "phpunit/phpunit": "^9.2"
+        "phpunit/phpunit": "^9.2",
+        "phpstan/phpstan": "^0.12.32"
     },
     "config": {
         "process-timeout": 1800
