update php to version 7.4

--- a/composer.json
+++ b/composer.json
@@ -5,7 +5,7 @@
     "description": "Keboola Snowflake DB Writer",
     "keywords": ["keboola", "snowflake", "db", "writer"],
     "require": {
-        "php": ">=7.1",
+        "php": "^7.4",
         "ext-json": "*",
         "ext-mbstring": "*",
         "ext-PDO": "*",
