--- a/composer.json
+++ b/composer.json
@@ -16,9 +16,9 @@
     },
     "require-dev": {
         "codeclimate/php-test-reporter": "^0.3",
-        "keboola/coding-standard": "^8.0",
         "phpunit/phpunit": "^9.2",
-        "phpstan/phpstan": "^0.12.32"
+        "phpstan/phpstan": "^0.12.32",
+        "keboola/coding-standard": "^9.0"
     },
     "config": {
         "process-timeout": 1800
