--- a/.travis.yml
+++ b/.travis.yml
@@ -22,6 +22,6 @@ jobs:
 deploy:
   provider: script
   skip_cleanup: true
-  script: ./deploy.sh
+  script: ./deployMultiple.sh
   on:
     tags: true
