--- a/.travis.yml
+++ b/.travis.yml
@@ -6,18 +6,31 @@ services:
   - docker
 
 before_install:
-  - docker-compose -v
+  - export APP_IMAGE=db-snowflake-writer
+  - docker build . --tag=$APP_IMAGE
 
 jobs:
   include:
     - stage: run tests via S3 stage
       install:
-        - docker-compose build app
-        - docker-compose run --rm -e CODECLIMATE_REPO_TOKEN=$CODECLIMATE_REPO_TOKEN -e STORAGE_API_TOKEN=$STORAGE_API_TOKEN_S3 app composer ci-and-codeclimate
+        - docker run
+          -e CODECLIMATE_REPO_TOKEN=$CODECLIMATE_REPO_TOKEN
+          -e STORAGE_API_TOKEN=$STORAGE_API_TOKEN_S3
+          $APP_IMAGE composer ci-and-codeclimate
     - stage: run tests via ABS stage
       install:
-        - docker-compose build app
-        - docker-compose run --rm -e CODECLIMATE_REPO_TOKEN=$CODECLIMATE_REPO_TOKEN -e STORAGE_API_TOKEN=$STORAGE_API_TOKEN_ABS app composer ci-and-codeclimate
+        - docker run
+          -e CODECLIMATE_REPO_TOKEN=$CODECLIMATE_REPO_TOKEN
+          -e STORAGE_API_TOKEN=$STORAGE_API_TOKEN_ABS
+          $APP_IMAGE composer ci-and-codeclimate
+    - stage: push test image to ECR
+      install:
+        - docker pull quay.io/keboola/developer-portal-cli-v2:latest
+        - export REPOSITORY=`docker run --rm -e KBC_DEVELOPERPORTAL_USERNAME -e KBC_DEVELOPERPORTAL_PASSWORD -e KBC_DEVELOPERPORTAL_URL quay.io/keboola/developer-portal-cli-v2:latest ecr:get-repository $KBC_DEVELOPERPORTAL_VENDOR $KBC_DEVELOPERPORTAL_APP`
+        - docker tag $APP_IMAGE:latest $REPOSITORY:test
+        - eval $(docker run --rm -e KBC_DEVELOPERPORTAL_USERNAME -e KBC_DEVELOPERPORTAL_PASSWORD -e KBC_DEVELOPERPORTAL_URL quay.io/keboola/developer-portal-cli-v2:latest ecr:get-login $KBC_DEVELOPERPORTAL_VENDOR $KBC_DEVELOPERPORTAL_APP)
+        - docker push $REPOSITORY:test
+        - docker pull quay.io/keboola/syrup-cli:latest
 
 deploy:
   provider: script
