add missing env

--- a/.travis.yml
+++ b/.travis.yml
@@ -16,12 +16,32 @@ jobs:
         - docker run
           -e CODECLIMATE_REPO_TOKEN=$CODECLIMATE_REPO_TOKEN
           -e STORAGE_API_TOKEN=$STORAGE_API_TOKEN_S3
+          -e KBC_RUNID
+          -e KBC_URL
+          -e STORAGE_API_TOKEN
+          -e DB_HOST
+          -e DB_PORT
+          -e DB_USER
+          -e DB_PASSWORD
+          -e DB_DATABASE
+          -e DB_SCHEMA
+          -e DB_WAREHOUSE
           $APP_IMAGE composer ci-and-codeclimate
     - stage: run tests via ABS stage
       install:
         - docker run
           -e CODECLIMATE_REPO_TOKEN=$CODECLIMATE_REPO_TOKEN
           -e STORAGE_API_TOKEN=$STORAGE_API_TOKEN_ABS
+          -e KBC_RUNID
+          -e KBC_URL
+          -e STORAGE_API_TOKEN
+          -e DB_HOST
+          -e DB_PORT
+          -e DB_USER
+          -e DB_PASSWORD
+          -e DB_DATABASE
+          -e DB_SCHEMA
+          -e DB_WAREHOUSE
           $APP_IMAGE composer ci-and-codeclimate
     - stage: push test image to ECR
       install:
