--- a/composer.json
+++ b/composer.json
@@ -12,7 +12,8 @@
         "keboola/db-writer-common": "^5.7",
         "keboola/csv": "^1.1",
         "keboola/storage-api-client": "^10.15",
-        "symfony/config": "^4.0"
+        "symfony/config": "^4.0",
+        "keboola/php-file-storage-utils": "^0.2.1"
     },
     "require-dev": {
         "codeclimate/php-test-reporter": "^0.3",
