--- a/phpunit.xml.dist
+++ b/phpunit.xml.dist
@@ -9,17 +9,16 @@
          stopOnFailure="false"
          bootstrap="vendor/autoload.php">
 
-    <testsuite name="Snowflake Writer Test Suite">
-        <directory>tests</directory>
-    </testsuite>
-
-    <filter>
-        <whitelist processUncoveredFilesFromWhitelist="true">
-            <directory suffix=".php">./src/Keboola/DbWriter</directory>
-        </whitelist>
-    </filter>
-
-    <logging>
-        <log type="coverage-clover" target="build/logs/clover.xml"/>
-    </logging>
+    <testsuites>
+        <testsuite name="unit">
+            <directory>tests/phpunit</directory>
+            <exclude>tests/phpunit/PerformanceTest.php</exclude>
+        </testsuite>
+        <testsuite name="functional">
+            <directory>tests/functional</directory>
+        </testsuite>
+        <testsuite name="perf">
+            <file>tests/phpunit/PerformanceTest.php</file>
+        </testsuite>
+    </testsuites>
 </phpunit>
