--- a/.github/workflows/push.yml
+++ b/.github/workflows/push.yml
@@ -114,7 +114,7 @@ jobs:
       -
         name: Run tests
         run: |
-          docker-compose run --rm \
+          docker compose run --rm \
           -e DB_SCHEMA=${{ env[format('DB_SCHEMA_{0}', matrix.staging_storage)] }} \
           -e KBC_URL=${{ env[format('KBC_URL_{0}', matrix.staging_storage)] }} \
           -e STORAGE_API_TOKEN=${{ env[format('STORAGE_API_TOKEN_{0}', matrix.staging_storage)] }} \
