--- a/docker-compose.yml
+++ b/docker-compose.yml
@@ -11,6 +11,7 @@ services:
       - DB_PORT
       - DB_USER
       - DB_PASSWORD
+      - DB_KEYPAIR
       - DB_DATABASE
       - DB_SCHEMA
       - DB_WAREHOUSE
