--- a/docker-compose.yml
+++ b/docker-compose.yml
@@ -1,4 +1,3 @@
-version: '2'
 services:
   app: &default
     build: .
@@ -21,6 +20,7 @@ services:
       - ssh-keys:/root/.ssh
 
   dev:
+    platform: linux/amd64
     <<: *default
     volumes:
       - .:/code
