--- a/.github/workflows/push.yml
+++ b/.github/workflows/push.yml
@@ -21,7 +21,7 @@ env:
   DB_PORT: 443
   DB_USER: snowflake_writer
   DB_PASSWORD: ${{ secrets.SNOWFLAKE_DB_PASSWORD }}
-  DB_KEYPAIR: ${{ secrets.SNOWFLAKE_DB_KEYPAIR }}
+  DB_PRIVATEKEY: ${{ secrets.SNOWFLAKE_DB_PRIVATEKEY }}
   DB_DATABASE: snowflake_writer
   DB_WAREHOUSE: snowflake_writer
 
