--- a/docker-compose.yml
+++ b/docker-compose.yml
@@ -14,6 +14,7 @@ services:
       - DB_DATABASE
       - DB_SCHEMA
       - DB_WAREHOUSE
+      - DB_ROLE_NAME
     links:
       - sshproxy
     volumes:
